created 2 button styles, general and play. Linked landing and game pages

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="assets/css/style.css" rel ="stylesheet" />
     <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script> 
-    <title>Document</title>
+    <title>The Mustastic</title>
 </head>
 <body>
     <h1>This is the landing page</h1>
+    <a href="#" class="btn">Button 1</a>
+    <a href="/game.html" class="btn-play">Play</a>
     <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
