--- a/game.html
+++ b/game.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="assets/css/style.css" rel ="stylesheet" />
     <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script> 
-    <title>Document</title>
+    <title>The Mustastic</title>
 </head>
 <body>
     <h1>This is the game page</h1>
+    <a href="/index.html" class="btn">Back to landing page</a>
     <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
