Update script filename and link in game.html

--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="assets/css/style.css" rel ="stylesheet" />
-    <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script>
 
     <title>The Mustastic</title>
 </head>
@@ -13,6 +13,6 @@
     <h1>This is the game page</h1>
     <a href="/index.html" class="btn">Back to landing page</a>
 
-    <script type='text/javascript' src='script.js'></script>
+    <script type='text/javascript' src='./assets/js/game.js'></script>
 </body>
 </html>
