Add sample game background image

--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
 <body>
     <h1>This is the game page</h1>
     <a href="/index.html" class="btn">Back to landing page</a>
+    <img id="sample-background" src="assets/images/test-background.jpg" alt="Sample Background">
 
     <script type='text/javascript' src='script.js'></script>
 </body>
