Add timer functionality

--- a/game.html
+++ b/game.html
@@ -12,7 +12,14 @@
 <body>
     <h1>This is the game page</h1>
     <a href="/index.html" class="btn">Back to landing page</a>
-    <img id="sample-background" src="assets/images/test-background.jpg" alt="Sample Background">
+
+    <div class="game-container">
+
+    </div>
+    <div class="game-controls">
+        <h2>Timer</h2>
+        <p id="timer">1:00</p>
+    </div>
 
     <script type='text/javascript' src='./assets/js/game.js'></script>
 </body>
