Add basic js game logic

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <h1>This is the game page</h1>
     <a href="/index.html" class="btn">Back to landing page</a>
 
-    <div class="game-container">
+    <div class="game-container" id="background">
 
     </div>
     <div class="game-controls">
