Add and change the basic texts for the landing page

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <title>The Mustastic</title>
 </head>
 <body>
-    <h1>This is the landing page</h1>
-    <a href="#" class="btn">Button 1</a>
+    <header></header>
+    <h1>The Mustastic</h1>
+    <h2>Find the correct instrument before the time runs out!</h2>
+    <h3>Can you find them all?</h3>
     <a href="/game.html" class="btn-play">Play</a>
+    <a href="#" class="btn">Instructions</a>
+    <a href="#" class="btn">Contributors</a>
     <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
