Setup navbar and game layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>The Mustastic</title>
 </head>
 <body>
-    <header></header>
+    <header class="page-header">
+        <nav class="navbar">
+            <a class="home-icon navbar-icon" href="index.html"><i class="fas fa-home"></i></a>
+            <i class="fas fa-volume-up navbar-icon"></i>
+        </nav>
+    </header>
     <h1>The Mustastic</h1>
     <h2>Find the correct instrument before the time runs out!</h2>
     <h3>Can you find them all?</h3>
