--- a/game.html
+++ b/game.html
@@ -10,15 +10,28 @@
     <title>The Mustastic</title>
 </head>
 <body>
+    <header class="page-header">
+        <nav class="navbar">
+            <a class="home-icon navbar-icon" href="index.html"><i class="fas fa-home"></i></a>
+            <i class="fas fa-volume-up navbar-icon"></i>
+        </nav>
+    </header>
     <h1>This is the game page</h1>
-    <a href="/index.html" class="btn">Back to landing page</a>
+    <!-- <a href="/index.html" class="btn">Back to landing page</a> -->
 
     <div class="game-container" id="background">
+        <div class="game-screen">
+            
+        </div>
 
-    </div>
-    <div class="game-controls">
-        <h2>Timer</h2>
-        <p id="timer">1:00</p>
+        <div class="game-controls">
+            <h2>Timer</h2>
+            <p id="timer">1:00</p>
+
+            <div class="instrument-container">
+                <img src="./assets/images/test-background.jpg" alt="">
+            </div>
+        </div>
     </div>
 
     <script type='text/javascript' src='./assets/js/game.js'></script>
