Fix sizes and positions of the buttons and basic text (#17)

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <h1>The Mustastic</h1>
     <h2>Find the correct instrument before the time runs out!</h2>
     <h3>Can you find them all?</h3>
-    <a href="/game.html" class="btn-play">Play</a>
+    <div class="btn-wrapper">
+    <a href="/game.html" class="btn btn-play">Play</a>
     <a href="#" class="btn">Instructions</a>
     <a href="#" class="btn">Contributors</a>
+    </div>
     <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
