Fix sizes and positions on both pages

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <header class="page-header">
         <nav class="navbar">
             <a class="home-icon navbar-icon" href="index.html"><i class="fas fa-home"></i></a>
+            <h1>The Mustastic Location</h1>
             <i class="fas fa-volume-up navbar-icon"></i>
         </nav>
     </header>
-    <h1>The Mustastic</h1>
+    <main>
     <h2>Find the correct instrument before the time runs out!</h2>
     <h3>Can you find them all?</h3>
     <div class="btn-wrapper">
@@ -23,6 +24,7 @@
     <a href="#" class="btn">Instructions</a>
     <a href="#" class="btn">Contributors</a>
     </div>
+    </main>
     <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
