--- a/game.html
+++ b/game.html
@@ -13,12 +13,12 @@
     <header class="page-header">
         <nav class="navbar">
             <a class="home-icon navbar-icon" href="index.html"><i class="fas fa-home"></i></a>
+            <h1>The Mustastic Location</h1>
             <i class="fas fa-volume-up navbar-icon"></i>
         </nav>
     </header>
-    <h1>This is the game page</h1>
     <!-- <a href="/index.html" class="btn">Back to landing page</a> -->
-
+    <main class="game-page">
     <div class="game-container" id="background">
         <div class="game-screen">
             
@@ -33,6 +33,7 @@
             </div>
         </div>
     </div>
+    </main>
 
     <script type='text/javascript' src='./assets/js/game.js'></script>
 </body>
