Add click boxes to characters

--- a/game.html
+++ b/game.html
@@ -21,7 +21,15 @@
     <main class="game-page">
     <div class="game-container" id="background">
         <div class="game-screen">
-            
+            <div class="invisible-div" id="bongo">bongo</div>
+            <div class="invisible-div" id="cello">cello</div>
+            <div class="invisible-div" id="child-sing">child-sing</div>
+            <div class="invisible-div" id="drum">drum</div>
+            <div class="invisible-div" id="flute">flute</div>
+            <div class="invisible-div" id="guitar">guitar</div>
+            <div class="invisible-div" id="piano">piano</div>
+            <div class="invisible-div" id="trombone">trombone</div>
+            <div class="invisible-div" id="violin">violin</div>
         </div>
 
         <div class="game-controls">
