--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
     <main class="game-page">
     <div class="game-container" id="background">
         <div class="game-screen">
-            
+            <img src="./assets/images/Background.png" alt="">
         </div>
 
         <div class="game-controls">
