--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <a class="home-icon navbar-icon" href="index.html"><i class="fas fa-home"></i></a>
             <h1>The Mustastic Location</h1>
-            <i class="fas fa-volume-up navbar-icon"></i>
+            <i id="audio-toggler" class="fas fa-volume-up navbar-icon"></i>
         </nav>
     </header>
     <!-- <a href="/index.html" class="btn">Back to landing page</a> -->
