--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <a class="home-icon navbar-icon" href="index.html"><i class="fas fa-home"></i></a>
             <h1>The Mustastic Location</h1>
-            <i class="fas fa-volume-up navbar-icon"></i>
+            <i id="audio-toggler" class="fas fa-volume-up navbar-icon"></i>
         </nav>
     </header>
     <main>
