--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     <main>
     <h2>Find the correct instrument before the time runs out!</h2>
     <h3>Can you find them all?</h3>
+    <div class="hero-container">
+    <img src="./assets/images/heroimage.png" class="hero-image" alt="">
     <div class="btn-wrapper">
     <a href="/game.html" class="btn btn-play">Play</a>
     <a href="#" class="btn">Instructions</a>
     <a href="#" class="btn">Contributors</a>
+    </div>
     </div>
     </main>
     <script type='text/javascript' src='script.js'></script>
