added modal for game instructions

--- a/index.html
+++ b/index.html
@@ -21,10 +21,26 @@
     <h3>Can you find them all?</h3>
     <div class="btn-wrapper">
     <a href="/game.html" class="btn btn-play">Play</a>
-    <a href="#" class="btn">Instructions</a>
-    <a href="#" class="btn">Contributors</a>
+    
+<!-- Trigger/Open The Instructions Modal -->
+<div id="myBtn" class="btn">Instructions</div>
+    <!-- The Instructions Modal -->
+    <div id="myModal" class="modal">
+       <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>How to play</h2>
+            <p>Find as many musical instruments as you can in 60 seconds!</p>
+            <p>Turn the audio on to hear the sound of the instrument and find it in the picture.</p>
+            <p>You can play without audio by finding the instrument you see on the right hand side of the screen</p><br>
+            <p><strong>Good luck and enjoy!</strong></p>
+        </div>
     </div>
+    
+<!-- Trigger/Open The Contributions Modal -->
+<div id="myBtn2" class="btn">Contribution</div>
+   
     </main>
-    <script type='text/javascript' src='script.js'></script>
+    <script type='text/javascript' src='./assets/js/game.js'></script>
 </body>
 </html>
