--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href ="assets/css/style.css" rel ="stylesheet" />
-    <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script> 
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script>
     <title>The Mustastic</title>
 </head>
+
 <body>
     <header class="page-header">
         <nav class="navbar">
@@ -17,35 +19,37 @@
         </nav>
     </header>
     <main>
-      <h2>Find the correct instrument before the time runs out!</h2>
-      <h3>Can you find them all?</h3>
-    <div class="hero-container">
-      <img src="./assets/images/heroimage.png" class="hero-image" alt="">
-      <div class="btn-wrapper">
-        <a href="/game.html" class="btn btn-play">Play</a>
-    
-      <!-- Trigger/Open The Instructions Modal -->
-      <div id="myBtn" class="btn">Instructions</div>
-      <!-- The Instructions Modal -->
-        <div id="myModal" class="modal">
-          <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <h2>How to play</h2>
-              <p>Find as many musical instruments as you can in 60 seconds!</p>
-              <p>Turn the audio on to hear the sound of the instrument and find it in the picture.</p>
-              <p>You can play without audio by finding the instrument you see on the right hand side of the screen</p><br>
-              <p><strong>Good luck and enjoy!</strong></p>
-          </div>
-      </div>
-   
-      <!-- Trigger/Open The Contributions Modal -->
-      <div id="myBtn2" class="btn">Contribution</div>
+        <h2>Find the correct instrument before the time runs out!</h2>
+        <h3>Can you find them all?</h3>
+        <div class="hero-container">
+            <img src="./assets/images/heroimage.png" class="hero-image" alt="">
+            <div class="btn-wrapper">
+                <a href="/game.html" class="btn btn-play">Play</a>
 
-    </div>
-    </div>
+                <!-- Trigger/Open The Instructions Modal -->
+                <div id="myBtn" class="btn">Instructions</div>
+                <!-- The Instructions Modal -->
+                <div id="myModal" class="modal">
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <h2>How to play</h2>
+                        <p>Find as many musical instruments as you can in 60 seconds!</p>
+                        <p>Turn the audio on to hear the sound of the instrument and find it in the picture.</p>
+                        <p>You can play without audio by finding the instrument you see on the right hand side of the
+                            screen</p><br>
+                        <p><strong>Good luck and enjoy!</strong></p>
+                    </div>
+                </div>
+
+                <!-- Trigger/Open The Contributions Modal -->
+                <div id="myBtn2" class="btn">Contribution</div>
+
+            </div>
+        </div>
 
     </main>
     <script type='text/javascript' src='./assets/js/game.js'></script>
 </body>
+
 </html>
