Fix instruction modal popup

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
     </main>
-    <script type='text/javascript' src='./assets/js/game.js'></script>
+    <script type='text/javascript' src='./assets/js/modal.js'></script>
 </body>
 
 </html>
