Add footer with copyright

--- a/game.html
+++ b/game.html
@@ -50,6 +50,7 @@
         </div>
     </div>
     </main>
+    <footer>Copyright ©ProGrammys 2022</footer>
 
     <script type='text/javascript' src='./assets/js/game.js'></script>
 </body>
