--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         </div>
 
     </main>
+    <footer>Copyright ©ProGrammys 2022</footer>
+
     <script type='text/javascript' src='./assets/js/modal.js'></script>
 </body>
 
