--- a/game.html
+++ b/game.html
@@ -48,6 +48,32 @@
                 <img src="./assets/images/violin.png" alt="" id="violin-img" class="invisible">
             </div>
         </div>
+        
+        <!-- The Game Won Modal -->
+        <!-- <div id="myModal" class="modal"> -->
+            <!-- Modal content -->
+            <!-- <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Congratulations!!!</h2>
+                <p>You managed to find all of the instruments in less than 60 seconds!</p>
+                <p>Try again to see if you can beat your time!</p><br>
+                <a href="game.html" class="btn">Try Again</a>
+                <a href="index.html" class="btn">Home</a>
+            </div>
+        </div> -->
+
+        <!-- The Game Lost Modal -->
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Unlucky!!!</h2>
+                <p>You did not manage to find all of the instruments within the time.</p>
+                <p>Try again to see if you can find the remaining instruments!</p><br>
+                <a href="game.html" class="btn">Try Again</a>
+                <a href="index.html" class="btn">Home</a>
+            </div>
+        </div>
     </div>
     </main>
 
