Update modal logic and style contributors modal

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <a href="/game.html" class="btn btn-play">Play</a>
 
                 <!-- Trigger/Open The Instructions Modal -->
-                <div id="myBtn" class="btn">Instructions</div>
+                <a href="#instruction-modal" id="instruction-btn" class="btn modal-btn">Instructions</a>
                 <!-- The Instructions Modal -->
-                <div id="myModal" class="modal">
+                <div id="instruction-modal" class="modal">
                     <!-- Modal content -->
                     <div class="modal-content">
                         <span class="close">&times;</span>
@@ -43,8 +43,22 @@
                 </div>
 
                 <!-- Trigger/Open The Contributions Modal -->
-                <div id="myBtn2" class="btn">Contribution</div>
-
+                <a href="#contributors-modal" id="contributors-btn" class="btn modal-btn">Contributors</a>
+                <!-- The Contributors Modal -->
+                <div id="contributors-modal" class="modal">
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <h2>Contributors</h2>
+                        <a href="https://github.com/nikimacm" class="github-link" target="_blank"><i class="fab fa-github"></i>nikimacm</a>
+                        <a href="https://github.com/MiaRasmussen05" class="github-link" target="_blank"><i class="fab fa-github"></i>MiaRasmussen05</a>
+                        <a href="https://github.com/TuckerFaulk" class="github-link" target="_blank"><i class="fab fa-github"></i>TuckerFaulk</a>
+                        <a href="https://github.com/rahcancode" class="github-link" target="_blank"><i class="fab fa-github"></i>rahcancode</a>
+                        <a href="https://github.com/Jack112-create" class="github-link" target="_blank"><i class="fab fa-github"></i>Jack112-create</a>
+                        <h2>Mentor</h2>
+                        <a href="https://github.com/NaoiseGaffney" class="github-link" target="_blank"><i class="fab fa-github"></i>NaoiseGaffney</a>
+                    </div>
+                </div>
             </div>
         </div>
 
