Add modal js for game win and lose

--- a/game.html
+++ b/game.html
@@ -50,9 +50,9 @@
         </div>
         
         <!-- The Game Won Modal -->
-        <!-- <div id="myModal" class="modal"> -->
+        <div id="myModalWon" class="modal">
             <!-- Modal content -->
-            <!-- <div class="modal-content">
+            <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2>Congratulations!!!</h2>
                 <p>You managed to find all of the instruments in less than 60 seconds!</p>
@@ -60,10 +60,10 @@
                 <a href="game.html" class="btn">Try Again</a>
                 <a href="index.html" class="btn">Home</a>
             </div>
-        </div> -->
+        </div>
 
         <!-- The Game Lost Modal -->
-        <div id="myModal" class="modal">
+        <div id="myModalLost" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
