Edit game modal buttons

--- a/game.html
+++ b/game.html
@@ -53,12 +53,11 @@
         <div id="myModalWon" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
-                <span class="close">&times;</span>
                 <h2>Congratulations!!!</h2>
                 <p>You managed to find all of the instruments in less than 60 seconds!</p>
                 <p>Try again to see if you can beat your time!</p><br>
-                <a href="game.html" class="btn">Try Again</a>
-                <a href="index.html" class="btn">Home</a>
+                <a href="game.html" class="btn game-btn">Restart</a>
+                <a href="index.html" class="btn game-btn">Home</a>
             </div>
         </div>
 
@@ -66,12 +65,11 @@
         <div id="myModalLost" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
-                <span class="close">&times;</span>
                 <h2>Unlucky!!!</h2>
                 <p>You did not manage to find all of the instruments within the time.</p>
                 <p>Try again to see if you can find the remaining instruments!</p><br>
-                <a href="game.html" class="btn">Try Again</a>
-                <a href="index.html" class="btn">Home</a>
+                <a href="game.html" class="btn game-btn">Restart</a>
+                <a href="index.html" class="btn game-btn">Home</a>
             </div>
         </div>
     </div>
