Add game start btn including js

--- a/game.html
+++ b/game.html
@@ -47,6 +47,10 @@
                 <img src="./assets/images/trombone.png" alt="" id="trombone-img" class="invisible">
                 <img src="./assets/images/violin.png" alt="" id="violin-img" class="invisible">
             </div>
+
+            <div>
+                <button class="btn" id="start-btn">Start</button>
+            </div>
         </div>
         
         <!-- The Game Won Modal -->
