Add more information to the instructions

--- a/index.html
+++ b/index.html
@@ -34,10 +34,24 @@
                     <div class="modal-content">
                         <span class="close">&times;</span>
                         <h2>How to play</h2>
-                        <p>Find as many musical instruments as you can in 60 seconds!</p>
-                        <p>Turn the audio on to hear the sound of the instrument and find it in the picture.</p>
-                        <p>You can play without audio by finding the instrument you see on the right hand side of the
-                            screen</p><br>
+                        <p>Can you find all the hidden instruments that are making a sound before the time is up?</p>
+                        <br>
+                        <p>As soon as you are ready you click start, and then the timer is off. A sound will be heard 
+                            from one of the instruments in the picture, and if you find the right character that is 
+                            playing that sound you get a point after clicking it.<br>
+                            Want to play again? Just click restart and you can try and beat your own score!
+                        </p>
+                        <br>
+                        <p>You can play the game without audio if needed. Just click mute in the top right corner and 
+                            then click on the arrow by the timer for the image of the character with the instrument you 
+                            are looking for under the timer. The image is shown on the right hand side of the
+                            game screen.</p>
+                        <br>
+                        <p>Give yourself a challenge and try and find the exact image that is making the sound without
+                            the help of the helping image, but be careful there might be multiple of the same instrument
+                            trying to keep you away from finding the right one!
+                        </p>
+                        <br>
                         <p><strong>Good luck and enjoy!</strong></p>
                     </div>
                 </div>
