Add game score to game lost modal and game timer to game won modals

--- a/game.html
+++ b/game.html
@@ -58,7 +58,7 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <h2>Congratulations!!!</h2>
-                <p>You managed to find all of the instruments in less than 60 seconds!</p>
+                <p>You managed to find all of the instruments in <span id="game-time">0</span> seconds!</p>
                 <p>Try again to see if you can beat your time!</p><br>
                 <a href="game.html" class="btn game-btn">Restart</a>
                 <a href="index.html" class="btn game-btn">Home</a>
@@ -70,7 +70,7 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <h2>Unlucky!!!</h2>
-                <p>You did not manage to find all of the instruments within the time.</p>
+                <p>You only managed to find <strong><span id="game-score">0</span> out of 9</strong> of the instruments within the time.</p>
                 <p>Try again to see if you can find the remaining instruments!</p><br>
                 <a href="game.html" class="btn game-btn">Restart</a>
                 <a href="index.html" class="btn game-btn">Home</a>
