Fix play button bug

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="hero-container">
             <img src="./assets/images/heroimage.png" class="hero-image" alt="">
             <div class="btn-wrapper">
-                <a href="/game.html" class="btn btn-play">Play</a>
+                <a href="game.html" class="btn btn-play">Play</a>
 
                 <!-- Trigger/Open The Instructions Modal -->
                 <a href="#instruction-modal" id="instruction-btn" class="btn modal-btn">Instructions</a>
