--- a/game.html
+++ b/game.html
@@ -7,7 +7,8 @@
     <link href ="assets/css/style.css" rel ="stylesheet" />
     <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script>
 
-    <title>The Mustastic</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>The Mustastic Location</title>
 </head>
 <body>
     <header class="page-header">
