--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/aa0c2203e6.js" crossorigin="anonymous"></script>
-    <title>The Mustastic</title>
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>The Mustastic Location</title>
 </head>
 
 <body>
