Toggle images and fixed bug: lost modal replaces win modal once timer runs out (#52)
* Add character image toggle

* Fix bug: lost screen appears after game won mondal once timer runs out

--- a/game.html
+++ b/game.html
@@ -49,6 +49,9 @@
                 <img src="./assets/images/violin.png" alt="" id="violin-img" class="invisible">
             </div>
 
+            <div><i class="toggle-images fas fa-sort-down invisible" id="toggle-images-on"></i></div>
+            <div><i class="toggle-images fas fa-sort-up invisible" id="toggle-images-off"></i></div>
+
             <div>
                 <button class="btn" id="start-btn">Start</button>
             </div>
