Remove click box borders

--- a/game.html
+++ b/game.html
@@ -22,15 +22,15 @@
     <main class="game-page">
     <div class="game-container" id="background">
         <div class="game-screen">
-            <div class="invisible-div" id="bongo-click-box">bongo</div>
-            <div class="invisible-div" id="cello-click-box">cello</div>
-            <div class="invisible-div" id="child-sing-click-box">child-sing</div>
-            <div class="invisible-div" id="drum-click-box">drum</div>
-            <div class="invisible-div" id="flute-click-box">flute</div>
-            <div class="invisible-div" id="guitar-click-box">guitar</div>
-            <div class="invisible-div" id="piano-click-box">piano</div>
-            <div class="invisible-div" id="trombone-click-box">trombone</div>
-            <div class="invisible-div" id="violin-click-box">violin</div>
+            <div class="invisible-div" id="bongo-click-box"></div>
+            <div class="invisible-div" id="cello-click-box"></div>
+            <div class="invisible-div" id="child-sing-click-box"></div>
+            <div class="invisible-div" id="drum-click-box"></div>
+            <div class="invisible-div" id="flute-click-box"></div>
+            <div class="invisible-div" id="guitar-click-box"></div>
+            <div class="invisible-div" id="piano-click-box"></div>
+            <div class="invisible-div" id="trombone-click-box"></div>
+            <div class="invisible-div" id="violin-click-box"></div>
         </div>
 
         <div class="game-controls">
