Fix positions of modals and invisible divs

--- a/game.html
+++ b/game.html
@@ -60,7 +60,7 @@
         <!-- The Game Won Modal -->
         <div id="myModalWon" class="modal">
             <!-- Modal content -->
-            <div class="modal-content">
+            <div class="modal-content game-modal">
                 <h2>Congratulations!!!</h2>
                 <p>You managed to find all of the instruments in <span id="game-time">0</span> seconds!</p>
                 <p>Try again to see if you can beat your time!</p><br>
@@ -72,7 +72,7 @@
         <!-- The Game Lost Modal -->
         <div id="myModalLost" class="modal">
             <!-- Modal content -->
-            <div class="modal-content">
+            <div class="modal-content game-modal">
                 <h2>Unlucky!!!</h2>
                 <p>You only managed to find <strong><span id="game-score">0</span> out of 9</strong> of the instruments within the time.</p>
                 <p>Try again to see if you can find the remaining instruments!</p><br>
